src/main/metadata/objects/ProvinceTranslation__mdt.object
<CustomObject>
    <fields>
        <fullName>MD__c</fullName>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_Name__c</fullName>
        <label>Picklist Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_EN10__c</fullName>
        <label>Province_EN10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_EN11__c</fullName>
        <label>Province_EN11</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_EN12__c</fullName>
        <label>Province_EN12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_TR10__c</fullName>
        <label>Province_TR10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_TR11__c</fullName>
        <label>Province_TR11</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province_TR12__c</fullName>
        <label>Province_TR12</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ProvinceTranslation</label>
    <pluralLabel>ProvinceTranslation</pluralLabel>
</CustomObject>